[package]
name = "after-drop"
version = "1.0.1"
edition = "2021"
description = "Will act like defer in go or jai, but you can store it and move it"
authors = ["konkitoman"]
license = "GPL-3.0"
repository = "https://github.com/konkitoman/after-drop"
keywords = ["defer"]

[features]
default = ["std"]
std = []

[dependencies]
